# matchday

./: .gitignore  README.md  pyproject.toml  schedule.html
matchday/: chatgpt_client.py  cli.py  main.py
matchday/game_fetcher_strategies/: base.py  web_scraper_fetcher.py
squad_check/: chatgpt_client.py  logger.py  main.py
squad_check/game_fetcher_strategies/: __init__.py  web_scraper_fetcher.py
