[project]
name = "squad-check"
version = "0.1.0"
description = ""
authors = [
    {name = "adriano",email = "adriano.dramisino@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=1.61.1,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "json-log-formatter (>=1.1,<2.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
