[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "matchday"
version = "0.1.0"
description = "A CLI tool to footy sevens schedules."
authors = [
    {name = "adriano",email = "adriano.dramisino@proton.me"}
]

license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=1.61.1,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "json-log-formatter (>=1.1,<2.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]

[project.scripts]
matchday = "matchday.cli:main"
